2000-06-12  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (rcsbuf_valword): Set rcsbuf->vlen to keep rcsbuf_valcopy()
	from allocating more memory than needed for @ strings.  Don't declare
	unless PRESERVE_PERMISSIONS_SUPPORT (since not defined).

	* rcs.c (RCS_abandon): New function to abandon changes.
	* rcs.h: Declare it.
	* admin.c (admin_fileproc): Use it instead of RCS_reparsercsfile.

	* commit.c (commit_fileproc): Fix memory leaks.
	* patch.c (patch_fileproc): Ditto.
	* rcs.c (RCS_nodeisbranch, RCS_copydeltas): Ditto.
	* tag.c (tag_fileproc): Ditto.
	* update.c (update): Ditto.

2000-06-09  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_reparsercsfile, RCS_fully_parse, getdelta,
	RCS_getdeltatext): Handle newphrases with composite values.
	(rcsbuf_getkey): Don't remove @s in composite values -- it makes
	it impossible to parse the value!  Set special flag to indicate
	a composite value.
	(rcsbuf_valcopy, rcsbuf_valpolish_internal): Handle composite values.
	(putrcsfield): Write composite values.
	(RCS_checkin): Set node types in other_delta list.
	* hash.h: Add RCSCMPFLD.
	* hash.c (nodetypestring): Ditto.

	* rcs.c (getdelta): Never allocate space for value, just return
	pointer into rcsbuf (fixes memory leaks).  Use rcsbuf_getkey to
	read a key and value and then parse the value if needed rather
	than trying to read it in bits and pieces with rcsbuf_getid,
	rcsbuf_getstring, and rcsbuf_getword.
	(RCS_reparsercsfile): Change callers to compensate.
	(rcsbuf_valcmp, rcsbuf_valword): New functions.
	(rcsbuf_getid, rcsbuf_getstring, rcsbuf_getword): Deleted.
	* sanity.sh (rcs3-1): Now get slightly different error message.

2000-06-08  Larry Jones  <larry.jones@sdrc.com>

	* main.c (usg): Update CVS home page URL.

	* main.c (main): Provide an actual error message for an unknown
	command in addition to the usage message.

2000-06-07  Larry Jones  <larry.jones@sdrc.com>

	* server.c (serve_root, dirswitch, serve_repository,